[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://resources/tileset3.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/role_of_destruction.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/Zone99.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/time_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/time_inversion.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Interface/LAYOUT INTERFACE GJ (5).png" type="Texture" id=9]
[ext_resource path="res://assets/Interface/LAYOUT INTERFACE GJ (4).png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="ground" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 8, 0, 16, 8, 0, 17, 8, 0, 18, 8, 0, 19, 8, 0, 20, 8, 0, 21, 8, 0, 22, 8, 0, 23, 8, 0, 24, 8, 0, 25, 8, 0, 26, 8, 0, 27, 8, 0, 28, 8, 0, 29, 8, 0, 30, 8, 0, 31, 8, 0, 32, 8, 0, 33, 8, 0, 34, 8, 0, 35, 8, 0, 36, 8, 0, 37, 8, 0, 38, 8, 0, 39, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 65552, 8, 0, 65553, 8, 0, 65554, 8, 0, 65555, 8, 0, 65556, 8, 0, 65557, 8, 0, 65558, 8, 0, 65559, 8, 0, 65560, 8, 0, 65561, 8, 0, 65562, 8, 0, 65563, 8, 0, 65564, 8, 0, 65565, 8, 0, 65566, 8, 0, 65567, 8, 0, 65568, 8, 0, 65569, 8, 0, 65570, 8, 0, 65571, 8, 0, 65572, 8, 0, 65573, 8, 0, 65574, 8, 0, 65575, 8, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 8, 0, 131083, 8, 0, 131084, 8, 0, 131085, 8, 0, 131086, 8, 0, 131087, 8, 0, 131088, 8, 0, 131089, 8, 0, 131090, 8, 0, 131091, 8, 0, 131092, 8, 0, 131093, 8, 0, 131094, 8, 0, 131095, 8, 0, 131096, 8, 0, 131097, 8, 0, 131098, 8, 0, 131099, 8, 0, 131100, 8, 0, 131101, 8, 0, 131102, 8, 0, 131103, 8, 0, 131104, 8, 0, 131105, 8, 0, 131106, 8, 0, 131107, 8, 0, 131108, 8, 0, 131109, 8, 0, 131110, 8, 0, 131111, 8, 0, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 196619, 8, 0, 196620, 8, 0, 196621, 8, 0, 196622, 8, 0, 196623, 8, 0, 196624, 8, 0, 196625, 8, 0, 196626, 8, 0, 196627, 8, 0, 196628, 8, 0, 196629, 8, 0, 196630, 8, 0, 196631, 8, 0, 196632, 8, 0, 196633, 8, 0, 196634, 8, 0, 196635, 8, 0, 196636, 8, 0, 196637, 8, 0, 196638, 8, 0, 196639, 8, 0, 196640, 8, 0, 196641, 8, 0, 196642, 8, 0, 196643, 8, 0, 196644, 8, 0, 196645, 8, 0, 196646, 8, 0, 196647, 8, 0, 262144, 8, 0, 262145, 8, 0, 262146, 9, 0, 262147, 9, 0, 262148, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 262164, 2, 0, 262165, 2, 0, 262166, 2, 0, 262167, 2, 0, 262168, 2, 0, 262169, 2, 0, 262170, 2, 0, 262171, 2, 0, 262172, 2, 0, 262173, 2, 0, 262174, 2, 0, 262175, 2, 0, 262176, 2, 0, 262177, 2, 0, 262178, 2, 0, 262179, 2, 0, 262180, 2, 0, 262181, 2, 0, 262182, 8, 0, 262183, 8, 0, 327680, 8, 0, 327681, 8, 0, 327682, 5, 0, 327683, 5, 0, 327684, 2, 0, 327693, 2, 0, 327704, 2, 0, 327713, 2, 0, 327714, 2, 0, 327717, 2, 0, 327718, 8, 0, 327719, 8, 0, 393216, 8, 0, 393217, 8, 0, 393220, 2, 0, 393223, 2, 0, 393226, 2, 0, 393229, 2, 0, 393240, 2, 0, 393249, 2, 0, 393250, 2, 0, 393253, 2, 0, 393254, 8, 0, 393255, 8, 0, 458752, 8, 0, 458753, 8, 0, 458756, 2, 0, 458759, 2, 0, 458762, 2, 0, 458765, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458776, 2, 0, 458777, 2, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 0, 458782, 2, 0, 458785, 2, 0, 458786, 2, 0, 458789, 2, 0, 458790, 8, 0, 458791, 8, 0, 524288, 8, 0, 524289, 8, 0, 524292, 2, 0, 524295, 2, 0, 524298, 2, 0, 524301, 2, 0, 524309, 2, 0, 524312, 2, 0, 524318, 2, 0, 524321, 2, 0, 524322, 2, 0, 524325, 2, 0, 524326, 8, 0, 524327, 8, 0, 589824, 8, 0, 589825, 8, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589834, 2, 0, 589837, 2, 0, 589845, 2, 0, 589848, 2, 0, 589851, 2, 0, 589854, 2, 0, 589861, 2, 0, 589862, 8, 0, 589863, 8, 0, 655360, 8, 0, 655361, 8, 0, 655370, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655381, 2, 0, 655384, 2, 0, 655387, 2, 0, 655390, 2, 0, 655397, 2, 0, 655398, 8, 0, 655399, 8, 0, 720896, 8, 0, 720897, 8, 0, 720906, 2, 0, 720917, 2, 0, 720920, 2, 0, 720923, 2, 0, 720929, 2, 0, 720930, 2, 0, 720931, 2, 0, 720932, 2, 0, 720933, 2, 0, 720934, 8, 0, 720935, 8, 0, 786432, 8, 0, 786433, 8, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786453, 2, 0, 786456, 2, 0, 786459, 2, 0, 786465, 2, 0, 786466, 2, 0, 786469, 2, 0, 786470, 8, 0, 786471, 8, 0, 851968, 8, 0, 851969, 8, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851989, 2, 0, 851992, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 852001, 2, 0, 852002, 2, 0, 852005, 2, 0, 852006, 8, 0, 852007, 8, 0, 917504, 8, 0, 917505, 8, 0, 917522, 2, 0, 917525, 2, 0, 917528, 2, 0, 917534, 2, 0, 917541, 2, 0, 917542, 8, 0, 917543, 8, 0, 983040, 8, 0, 983041, 8, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983058, 2, 0, 983061, 2, 0, 983064, 2, 0, 983070, 2, 0, 983077, 2, 0, 983078, 8, 0, 983079, 8, 0, 1048576, 8, 0, 1048577, 8, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1048606, 2, 0, 1048609, 2, 0, 1048610, 2, 0, 1048613, 2, 0, 1048614, 8, 0, 1048615, 8, 0, 1114112, 8, 0, 1114113, 8, 0, 1114116, 2, 0, 1114131, 3, 0, 1114132, 3, 0, 1114142, 2, 0, 1114145, 2, 0, 1114146, 2, 0, 1114149, 2, 0, 1114150, 8, 0, 1114151, 8, 0, 1179648, 8, 0, 1179649, 8, 0, 1179652, 2, 0, 1179667, 3, 0, 1179668, 3, 0, 1179678, 2, 0, 1179681, 2, 0, 1179682, 2, 0, 1179685, 2, 0, 1179686, 8, 0, 1179687, 8, 0, 1245184, 8, 0, 1245185, 8, 0, 1245188, 2, 0, 1245191, 2, 0, 1245192, 2, 0, 1245193, 2, 0, 1245194, 2, 0, 1245195, 2, 0, 1245196, 2, 0, 1245197, 2, 0, 1245198, 2, 0, 1245199, 2, 0, 1245200, 2, 0, 1245201, 2, 0, 1245202, 2, 0, 1245203, 2, 0, 1245204, 2, 0, 1245205, 2, 0, 1245206, 2, 0, 1245207, 2, 0, 1245208, 2, 0, 1245211, 2, 0, 1245212, 2, 0, 1245213, 2, 0, 1245214, 2, 0, 1245217, 2, 0, 1245218, 2, 0, 1245221, 2, 0, 1245222, 8, 0, 1245223, 8, 0, 1310720, 8, 0, 1310721, 8, 0, 1310724, 2, 0, 1310736, 2, 0, 1310747, 2, 0, 1310757, 2, 0, 1310758, 8, 0, 1310759, 8, 0, 1376256, 8, 0, 1376257, 8, 0, 1376260, 2, 0, 1376272, 2, 0, 1376283, 2, 0, 1376293, 2, 0, 1376294, 8, 0, 1376295, 8, 0, 1441792, 8, 0, 1441793, 8, 0, 1441796, 2, 0, 1441797, 2, 0, 1441798, 2, 0, 1441799, 2, 0, 1441800, 2, 0, 1441801, 2, 0, 1441802, 2, 0, 1441805, 2, 0, 1441808, 2, 0, 1441811, 2, 0, 1441812, 2, 0, 1441813, 2, 0, 1441814, 2, 0, 1441817, 2, 0, 1441818, 2, 0, 1441819, 2, 0, 1441820, 2, 0, 1441821, 2, 0, 1441822, 2, 0, 1441826, 2, 0, 1441827, 2, 0, 1441828, 2, 0, 1441829, 2, 0, 1441830, 8, 0, 1441831, 8, 0, 1507328, 8, 0, 1507329, 8, 0, 1507332, 2, 0, 1507333, 2, 0, 1507334, 2, 0, 1507335, 2, 0, 1507336, 2, 0, 1507337, 2, 0, 1507338, 2, 0, 1507341, 2, 0, 1507344, 2, 0, 1507347, 2, 0, 1507350, 2, 0, 1507353, 2, 0, 1507362, 2, 0, 1507365, 2, 0, 1507366, 8, 0, 1507367, 8, 0, 1572864, 8, 0, 1572865, 8, 0, 1572874, 2, 0, 1572877, 2, 0, 1572880, 2, 0, 1572883, 2, 0, 1572886, 2, 0, 1572889, 2, 0, 1572898, 2, 0, 1572901, 2, 0, 1572902, 8, 0, 1572903, 8, 0, 1638400, 8, 0, 1638401, 8, 0, 1638410, 2, 0, 1638413, 2, 0, 1638416, 2, 0, 1638419, 2, 0, 1638422, 2, 0, 1638425, 2, 0, 1638428, 2, 0, 1638431, 2, 0, 1638437, 2, 0, 1638438, 8, 0, 1638439, 8, 0, 1703936, 8, 0, 1703937, 8, 0, 1703938, 2, 0, 1703939, 2, 0, 1703940, 2, 0, 1703941, 2, 0, 1703942, 2, 0, 1703943, 2, 0, 1703946, 2, 0, 1703949, 2, 0, 1703950, 2, 0, 1703951, 2, 0, 1703952, 2, 0, 1703955, 2, 0, 1703958, 2, 0, 1703961, 2, 0, 1703964, 2, 0, 1703967, 2, 0, 1703973, 2, 0, 1703974, 8, 0, 1703975, 8, 0, 1769472, 8, 0, 1769473, 8, 0, 1769474, 2, 0, 1769491, 2, 0, 1769497, 2, 0, 1769500, 2, 0, 1769503, 2, 0, 1769504, 2, 0, 1769505, 2, 0, 1769506, 2, 0, 1769507, 2, 0, 1769508, 2, 0, 1769509, 2, 0, 1769510, 8, 0, 1769511, 8, 0, 1835008, 8, 0, 1835009, 8, 0, 1835010, 2, 0, 1835027, 2, 0, 1835033, 2, 0, 1835036, 2, 0, 1835043, 5, 0, 1835044, 0, 0, 1835045, 2, 0, 1835046, 8, 0, 1835047, 8, 0, 1900544, 8, 0, 1900545, 8, 0, 1900546, 2, 0, 1900547, 2, 0, 1900548, 2, 0, 1900549, 2, 0, 1900550, 2, 0, 1900551, 2, 0, 1900552, 2, 0, 1900553, 2, 0, 1900554, 2, 0, 1900555, 2, 0, 1900556, 2, 0, 1900557, 2, 0, 1900558, 2, 0, 1900559, 2, 0, 1900560, 2, 0, 1900561, 2, 0, 1900562, 2, 0, 1900563, 2, 0, 1900564, 2, 0, 1900565, 2, 0, 1900566, 2, 0, 1900567, 2, 0, 1900568, 2, 0, 1900569, 2, 0, 1900570, 2, 0, 1900571, 2, 0, 1900572, 2, 0, 1900579, 5, 0, 1900580, 0, 0, 1900581, 2, 0, 1900582, 8, 0, 1900583, 8, 0, 1966080, 8, 0, 1966081, 8, 0, 1966082, 8, 0, 1966083, 8, 0, 1966084, 8, 0, 1966085, 8, 0, 1966086, 8, 0, 1966087, 8, 0, 1966088, 8, 0, 1966089, 8, 0, 1966090, 8, 0, 1966091, 8, 0, 1966092, 8, 0, 1966093, 8, 0, 1966094, 8, 0, 1966095, 8, 0, 1966096, 8, 0, 1966097, 8, 0, 1966098, 8, 0, 1966099, 8, 0, 1966100, 8, 0, 1966101, 8, 0, 1966102, 8, 0, 1966103, 8, 0, 1966104, 8, 0, 1966105, 8, 0, 1966106, 8, 0, 1966107, 8, 0, 1966108, 8, 0, 1966109, 8, 0, 1966110, 8, 0, 1966111, 8, 0, 1966112, 8, 0, 1966113, 8, 0, 1966114, 8, 0, 1966115, 8, 0, 1966116, 8, 0, 1966117, 8, 0, 1966118, 8, 0, 1966119, 8, 0 )

[node name="death_time" type="Timer" parent="."]
wait_time = 0.01

[node name="area" parent="." instance=ExtResource( 3 )]
position = Vector2( 80.6844, 157.726 )

[node name="area2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1119.54, 912.648 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 635.131, 567.525 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="score" type="Label" parent="HUD"]
margin_left = 321.326
margin_top = -20.5623
margin_right = 921.326
margin_bottom = 92.4377
custom_fonts/font = SubResource( 1 )
text = "SCORE 0/5
"
align = 1
valign = 1

[node name="time_bar" parent="HUD" instance=ExtResource( 7 )]
anchor_right = 0.3
anchor_bottom = 0.39
margin_left = 427.739
margin_top = 64.9662
margin_right = 1963.74
margin_bottom = -308.914
rect_scale = Vector2( 0.198956, 1.83605 )

[node name="time_inversion_bar" parent="HUD" instance=ExtResource( 8 )]
editor/display_folded = true
margin_left = 1190.89
margin_top = 110.84
margin_right = 1230.89
margin_bottom = 150.84
rect_rotation = -90.0
rect_scale = Vector2( 2.32101, 0.467933 )

[node name="timer_inversion_bar" type="Timer" parent="HUD/time_inversion_bar"]
wait_time = 0.01
autostart = true

[node name="test" parent="HUD" instance=ExtResource( 8 )]
margin_left = 69.1089
margin_top = 110.84
margin_right = 109.109
margin_bottom = 150.84
rect_rotation = -90.0
rect_scale = Vector2( 2.32101, 0.467933 )
script = null

[node name="imagem_light" type="Sprite" parent="HUD"]
position = Vector2( 1131.5, 61.8398 )
scale = Vector2( 0.143613, 0.143613 )
texture = ExtResource( 9 )

[node name="imagem_black" type="Sprite" parent="HUD"]
position = Vector2( 146.986, 61.5145 )
scale = Vector2( 0.142031, 0.142031 )
texture = ExtResource( 10 )
[connection signal="timeout" from="death_time" to="." method="_on_death_time_timeout"]
[connection signal="timeout" from="HUD/time_inversion_bar/timer_inversion_bar" to="HUD" method="_on_timer_inversion_bar_timeout"]
